--- a/idees.gama.p2site/pom.xml
+++ b/idees.gama.p2site/pom.xml
@@ -5,9 +5,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>idees.gama</groupId>
-		<artifactId>ummisco.gaml.extensions.parent</artifactId>
+		<artifactId>idees.gama.parent</artifactId>
 		<version>1.7.0-SNAPSHOT</version>
-		<relativePath>../ummisco.gaml.extensions.parent/</relativePath>
+		<relativePath>../idees.gama.parent/</relativePath>
 	</parent>
 	<artifactId>ummisco.gaml.extensions.p2site</artifactId>
 	<packaging>eclipse-repository</packaging>
