--- a/idees.gama.parent/pom.xml
+++ b/idees.gama.parent/pom.xml
@@ -1,20 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>idees.gama</groupId>
 	<artifactId>idees.gama.parent</artifactId>
 	<version>1.7.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
+		<module>../idees.gama.graphicalmodeling</module>
+		<module>../idees.gama.emf.metamodel</module>
 		<module>../idees.gama.feature.graphical_modeling</module>
-		<module>../idees.gama.graphicalmodeling</module> 
-		<module>../idees.gama.emf.metamodel</module> 
+		<module>../idees.gama.p2site</module>
 	</modules>
 	<properties>
-  		<p2-maven.version>1.2.0-SNAPSHOT</p2-maven.version>
-    	<tycho.version>0.25.0</tycho.version>
+		<p2-maven.version>1.2.0-SNAPSHOT</p2-maven.version>
+		<tycho.version>0.25.0</tycho.version>
 		<project.version>1.7.0-SNAPSHOT</project.version>
-   </properties>
+	</properties>
+	<pluginRepositories>
+		<!-- <pluginRepository> <id>releases1</id> <url>https://oss.sonatype.org/content/groups/public</url> 
+			<layout>default</layout> </pluginRepository> <pluginRepository> <id>ssh-repository</id> 
+			<url>http://51.255.46.42/updates/repo/plugin</url> </pluginRepository> -->
+		<pluginRepository>
+			<id>buchen-maven-repo</id>
+			<url>http://buchen.github.io/maven-repo</url>
+			<layout>default</layout>
+		</pluginRepository>
+		<pluginRepository>
+			<id>pentaho-releases</id>
+			<url>http://repository.pentaho.org/artifactory/repo/</url>
+			<layout>default</layout>
+		</pluginRepository>
+
+	</pluginRepositories>
+
 	<repositories>
 		<repository>
 			<id>sonatype-nexus-snapshots</id>
@@ -48,10 +67,9 @@
 			<layout>p2</layout>
 		</repository>
 		<repository>
-			<id>gama</id>
-			<name>GAMA Snapshots</name>
-			<url>http://vps226121.ovh.net/updates/</url>
-			<layout>p2</layout>
+			<id>p2Repo-snapshots</id>
+			<name>GAMA p2Repo</name>
+			<url>http://51.255.46.42/updates/repo/plugin/</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
@@ -59,17 +77,44 @@
 				<enabled>true</enabled>
 			</snapshots>
 		</repository>
+
 	</repositories>
 	<build>
+
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh</artifactId>
+				<version>2.10</version>
+			</extension>
+		</extensions>
 		<plugins>
-	    <plugin>
-            <groupId>org.eclipse.tycho</groupId>
-            <artifactId>tycho-packaging-plugin</artifactId>
-            <version>${tycho.version}</version>
-            <configuration>
-                <strictVersions>false</strictVersions>
-            </configuration>
-        </plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-compiler-plugin</artifactId>
+				<version>0.25.0</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-packaging-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<strictVersions>false</strictVersions>
+				</configuration>
+			</plugin>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-maven-plugin</artifactId>
@@ -87,4 +132,5 @@
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
