--- a/idees.gama.p2site/pom.xml
+++ b/idees.gama.p2site/pom.xml
@@ -14,20 +14,17 @@
 
 	<distributionManagement>
 		<repository>
-			<id>ssh-repository</id>
+			<uniqueVersion>false</uniqueVersion>
+			<id>p2Repo</id>
 			<url>scpexe://51.255.46.42/./var/www/gama_graphicalmodelling_updates</url>
 		</repository>
+		<snapshotRepository>
+			<uniqueVersion>false</uniqueVersion>
+			<id>p2Repo</id>
+			<url>scpexe://51.255.46.42/./var/www/gama_graphicalmodelling_updates</url>
+		</snapshotRepository>
 	</distributionManagement>
-	<build>
 
-		<extensions>
-			<extension>
-				<groupId>org.apache.maven.wagon</groupId>
-				<artifactId>wagon-ssh</artifactId>
-				<version>2.10</version>
-			</extension>
-		</extensions>
-	</build>
 
 	<profiles>
 		<!-- This profile is used to upload the repo -->
@@ -35,7 +32,7 @@
 			<id>p2Repo</id>
 			<properties>
 				<!-- Properties relative to the distant host where to upload the repo -->
-				<ftp.url>sftp://51.255.46.42</ftp.url>
+				<ftp.url>scp://51.255.46.42</ftp.url>
 				<ftp.toDir>./var/www/gama_graphicalmodelling_updates</ftp.toDir>
 				<!-- Relative path to the repo being uploaded -->
 				<repo.path>${project.build.directory}/repository/</repo.path>
@@ -43,6 +40,17 @@
 
 			<build>
 				<plugins>
+					<plugin>
+						<artifactId>maven-deploy-plugin</artifactId>
+						<version>2.5</version>
+						<dependencies>
+							<dependency>
+								<groupId>org.apache.maven.wagon</groupId>
+								<artifactId>wagon-ssh</artifactId>
+								<version>2.12</version>
+							</dependency>
+						</dependencies>
+					</plugin>
 					<!-- Upload the repo to the server -->
 					<plugin>
 						<groupId>org.codehaus.mojo</groupId>
@@ -56,6 +64,13 @@
 									<goal>upload</goal>
 								</goals>
 								<configuration>
+									<rules>
+										<requireFilesSize>
+											<maxsize>50000</maxsize>
+											<minsize>90</minsize>
+										</requireFilesSize>
+									</rules>
+									<removeAll>true</removeAll>
 									<fromDir>${repo.path}</fromDir>
 									<includes>**</includes>
 									<toDir>${ftp.toDir}</toDir>
@@ -76,4 +91,21 @@
 			</build>
 		</profile>
 	</profiles>
+
+	<build>
+
+		<extensions>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh-external</artifactId>
+				<version>2.12</version>
+			</extension>
+			<extension>
+				<groupId>org.apache.maven.wagon</groupId>
+				<artifactId>wagon-ssh</artifactId>
+				<version>2.12</version>
+			</extension>
+		</extensions>
+	</build>
+
 </project>
