--- a/idees.gama.parent/pom.xml
+++ b/idees.gama.parent/pom.xml
@@ -6,11 +6,28 @@
 	<artifactId>idees.gama.parent</artifactId>
 	<version>1.7.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
+
+
+
+	<distributionManagement>
+		<repository>
+			<uniqueVersion>false</uniqueVersion>
+			<id>p2Repo</id>
+			<url>scp://51.255.46.42/./var/www/gama_graphicalmodelling_updates</url>
+		</repository>
+		<snapshotRepository>
+			<uniqueVersion>false</uniqueVersion>
+			<id>p2Repo</id>
+			<url>scp://51.255.46.42/./var/www/gama_graphicalmodelling_updates</url>
+		</snapshotRepository>
+	</distributionManagement>
+
+
 	<modules>
 		<module>../idees.gama.graphicalmodeling</module>
 		<module>../idees.gama.emf.metamodel</module>
 		<module>../idees.gama.feature.graphical_modeling</module>
-		<module>../idees.gama.p2site</module>
+		<!-- <module>../idees.gama.p2site</module> -->
 	</modules>
 	<properties>
 		<p2-maven.version>1.2.0-SNAPSHOT</p2-maven.version>
@@ -18,9 +35,6 @@
 		<project.version>1.7.0-SNAPSHOT</project.version>
 	</properties>
 	<pluginRepositories>
-		<!-- <pluginRepository> <id>releases1</id> <url>https://oss.sonatype.org/content/groups/public</url> 
-			<layout>default</layout> </pluginRepository> <pluginRepository> <id>ssh-repository</id> 
-			<url>http://51.255.46.42/updates/repo/plugin</url> </pluginRepository> -->
 		<pluginRepository>
 			<id>buchen-maven-repo</id>
 			<url>http://buchen.github.io/maven-repo</url>
@@ -33,6 +47,72 @@
 		</pluginRepository>
 
 	</pluginRepositories>
+	<profiles>
+		<!-- This profile is used to upload the repo -->
+		<profile>
+			<id>p2Repo</id>
+			<properties>
+				<!-- Properties relative to the distant host where to upload the repo -->
+				<ftp.url>scp://51.255.46.42</ftp.url>
+				<ftp.toDir>./var/www/gama_graphicalmodelling_updates</ftp.toDir>
+				<!-- Relative path to the repo being uploaded -->
+				<repo.path>${project.build.directory}/repository/</repo.path>
+			</properties>
+
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-deploy-plugin</artifactId>
+						<version>2.5</version>
+						<dependencies>
+							<dependency>
+								<groupId>org.apache.maven.wagon</groupId>
+								<artifactId>wagon-ssh</artifactId>
+								<version>2.12</version>
+							</dependency>
+						</dependencies>
+					</plugin>
+					<!-- Upload the repo to the server -->
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>wagon-maven-plugin</artifactId>
+						<version>1.0</version>
+						<executions>
+							<execution>
+								<id>p2Repo</id>
+								<phase>install</phase>
+								<goals>
+									<goal>upload</goal>
+								</goals>
+								<configuration>
+									<rules>
+										<requireFilesSize>
+											<maxsize>50000</maxsize>
+											<minsize>90</minsize>
+										</requireFilesSize>
+									</rules>
+									<removeAll>true</removeAll>
+									<fromDir>${repo.path}</fromDir>
+									<includes>**</includes>
+									<toDir>${ftp.toDir}</toDir>
+									<url>${ftp.url}</url>
+									<serverId>p2Repo</serverId>
+									<!-- Points to your settings.xml where the connection settings are 
+										stored as shown below -->
+									<!-- <server> -->
+									<!-- <id>p2Repo</id> -->
+									<!-- <username>username</username> -->
+									<!-- <password>password</password> -->
+									<!-- </server> -->
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
+
 
 	<repositories>
 		<repository>
@@ -79,6 +159,33 @@
 		</repository>
 
 	</repositories>
+
+
+	<dependencies>
+		<dependency>
+			<groupId>msi.gama</groupId>
+			<artifactId>ummisco.gama.annotations</artifactId>
+			<version>1.7.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>msi.gama</groupId>
+			<artifactId>msi.gama.processor</artifactId>
+			<version>1.4.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>msi.gama</groupId>
+			<artifactId>msi.gama.core</artifactId>
+			<version>1.7.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>msi.gama</groupId>
+			<artifactId>msi.gama.ext</artifactId>
+			<version>1.7.0-SNAPSHOT</version>
+		</dependency>
+
+	</dependencies>
+
+
 	<build>
 
 		<extensions>
