--- a/idees.gama.parent/pom.xml
+++ b/idees.gama.parent/pom.xml
@@ -116,6 +116,19 @@
 
 	<repositories>
 		<repository>
+			<snapshots>
+				<enabled>true</enabled>
+				<checksumPolicy>ignore</checksumPolicy>
+			</snapshots>
+			<releases>
+				<checksumPolicy>ignore</checksumPolicy>
+				<enabled>true</enabled>
+			</releases>
+			<id>p2Repo</id>
+			<name>p2Repo</name>
+			<url>http://51.255.46.42/updates/repo/</url>
+		</repository>
+		<repository>
 			<id>sonatype-nexus-snapshots</id>
 			<name>Sonatype Nexus Snapshots</name>
 			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
