--- a/idees.gama.parent/pom.xml
+++ b/idees.gama.parent/pom.xml
@@ -8,6 +8,80 @@
 	<packaging>pom</packaging>
 
 
+	<repositories>
+		<repository>
+			<snapshots>
+				<enabled>true</enabled>
+				<checksumPolicy>ignore</checksumPolicy>
+			</snapshots>
+			<releases>
+				<checksumPolicy>ignore</checksumPolicy>
+				<enabled>true</enabled>
+			</releases>
+			<id>p2Repo</id>
+			<name>p2Repo</name>
+			<url>http://51.255.46.42/updates/repo/</url>
+		</repository>
+
+		<repository>
+			<id>eclipse-mars</id>
+			<url>http://download.eclipse.org/releases/mars</url>
+			<layout>p2</layout>
+		</repository>
+		<repository>
+			<id>eclipse-elk</id>
+			<url>http://build.eclipse.org/modeling/elk/updates/nightly/</url>
+			<layout>p2</layout>
+		</repository>
+		<repository>
+			<id>eclipse-graphiti</id>
+			<url>http://download.eclipse.org/graphiti/updates/milestones/</url>
+			<layout>p2</layout>
+		</repository>
+		<repository>
+			<id>eclipse-xtext</id>
+			<url>http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/</url>
+			<layout>p2</layout>
+		</repository>
+		<repository>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<id>codehaus-snapshots</id>
+			<name>codehaus-snapshots</name>
+			<url>https://oss.sonatype.org/content/repositories/codehaus-snapshots/</url>
+		</repository>
+	</repositories>
+
+
+	<dependencies>
+		<dependency>
+			<groupId>msi.gama</groupId>
+			<artifactId>ummisco.gama.annotations</artifactId>
+			<version>1.7.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>msi.gama</groupId>
+			<artifactId>msi.gama.processor</artifactId>
+			<version>1.4.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>msi.gama</groupId>
+			<artifactId>msi.gama.core</artifactId>
+			<version>1.7.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>msi.gama</groupId>
+			<artifactId>msi.gama.ext</artifactId>
+			<version>1.7.0-SNAPSHOT</version>
+		</dependency>
+
+	</dependencies>
+
+
 
 	<modules>
 		<module>../idees.gama.graphicalmodeling</module>
@@ -86,80 +160,6 @@
 			</build>
 		</profile>
 	</profiles>
-
-
-	<repositories>
-		<repository>
-			<snapshots>
-				<enabled>true</enabled>
-				<checksumPolicy>ignore</checksumPolicy>
-			</snapshots>
-			<releases>
-				<checksumPolicy>ignore</checksumPolicy>
-				<enabled>true</enabled>
-			</releases>
-			<id>p2Repo</id>
-			<name>p2Repo</name>
-			<url>http://51.255.46.42/updates/repo/</url>
-		</repository>
-		<repository>
-			<id>sonatype-nexus-snapshots</id>
-			<name>Sonatype Nexus Snapshots</name>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>eclipse-mars</id>
-			<url>http://download.eclipse.org/releases/mars</url>
-			<layout>p2</layout>
-		</repository>
-		<repository>
-			<id>eclipse-elk</id>
-			<url>http://build.eclipse.org/modeling/elk/updates/nightly/</url>
-			<layout>p2</layout>
-		</repository>
-		<repository>
-			<id>eclipse-graphiti</id>
-			<url>http://download.eclipse.org/graphiti/updates/milestones/</url>
-			<layout>p2</layout>
-		</repository>
-		<repository>
-			<id>eclipse-xtext</id>
-			<url>http://download.eclipse.org/modeling/tmf/xtext/updates/composite/releases/</url>
-			<layout>p2</layout>
-		</repository>
-
-	</repositories>
-
-
-	<dependencies>
-		<dependency>
-			<groupId>msi.gama</groupId>
-			<artifactId>ummisco.gama.annotations</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>msi.gama</groupId>
-			<artifactId>msi.gama.processor</artifactId>
-			<version>1.4.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>msi.gama</groupId>
-			<artifactId>msi.gama.core</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>msi.gama</groupId>
-			<artifactId>msi.gama.ext</artifactId>
-			<version>1.7.0-SNAPSHOT</version>
-		</dependency>
-
-	</dependencies>
 
 
 	<build>
