--- a/idees.gama.p2site/pom.xml
+++ b/idees.gama.p2site/pom.xml
@@ -4,7 +4,7 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>idees.gama</groupId>
+		<groupId>msi.gama</groupId>
 		<artifactId>idees.gama.parent</artifactId>
 		<version>1.7.0-SNAPSHOT</version>
 		<relativePath>../idees.gama.parent/</relativePath>
