--- a/idees.gama.emf.metamodel/pom.xml
+++ b/idees.gama.emf.metamodel/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>idees.gama.emf.metamodel</artifactId>
   <packaging>eclipse-plugin</packaging>
   <parent>
-  	<groupId>msi.gama</groupId>
+  	<groupId>idees.gama</groupId>
   	<artifactId>idees.gama.parent</artifactId>
   	<version>1.7.0-SNAPSHOT</version>
         <relativePath>../idees.gama.parent/</relativePath>
