--- a/idees.gama.feature.graphical_modeling/pom.xml
+++ b/idees.gama.feature.graphical_modeling/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>idees.gama.feature.graphical_modeling</artifactId>
   <packaging>eclipse-feature</packaging>
   <parent>
-  	<groupId>msi.gama</groupId>
+  	<groupId>idees.gama</groupId>
   	<artifactId>idees.gama.parent</artifactId>
   	<version>1.7.0-SNAPSHOT</version>
   	<relativePath>../idees.gama.parent/</relativePath>
