--- a/idees.gama.parent/pom.xml
+++ b/idees.gama.parent/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>msi.gama</groupId>
+	<groupId>idees.gama</groupId>
 	<artifactId>idees.gama.parent</artifactId>
 	<version>1.7.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
@@ -78,7 +78,26 @@
 			<artifactId>msi.gama.ext</artifactId>
 			<version>1.7.0-SNAPSHOT</version>
 		</dependency>
-
+		<dependency>
+			<groupId>msi.gama</groupId>
+			<artifactId>msi.gama.application</artifactId>
+			<version>1.7.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>msi.gama</groupId>
+			<artifactId>msi.gama.lang.gaml</artifactId>
+			<version>1.7.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>msi.gama</groupId>
+			<artifactId>ummisco.gama.ui.shared</artifactId>
+			<version>1.7.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>msi.gama</groupId>
+			<artifactId>ummisco.gama.ui.modeling</artifactId>
+			<version>1.7.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 
