--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,7 @@ addons:
 cache:
   directories:
   - "$HOME/.m2"
-before_install:
-  - rm ~/.m2/settings.xml
+#before_install:  - rm ~/.m2/settings.xml
 script: sh ./build.sh
 after_success: 
     - export SSHPASS=$USER_PWD 
