--- a/idees.gama.parent/pom.xml
+++ b/idees.gama.parent/pom.xml
@@ -98,6 +98,17 @@
 			<artifactId>ummisco.gama.ui.modeling</artifactId>
 			<version>1.7.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>msi.gaml.architecture.simplebdi</groupId>
+			<artifactId>msi.gaml.architecture.simplebdi</artifactId>
+			<version>1.7.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>ummisco.gaml.extensions.maths</groupId>
+			<artifactId>ummisco.gaml.extensions.maths</artifactId>
+			<version>1.7.0-SNAPSHOT</version>
+		</dependency>
+		
 	</dependencies>
 
 
