--- a/idees.gama.parent/pom.xml
+++ b/idees.gama.parent/pom.xml
@@ -108,6 +108,11 @@
 			<artifactId>ummisco.gaml.extensions.maths</artifactId>
 			<version>1.7.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>ummisco.gama.ui.navigator</groupId>
+			<artifactId>ummisco.gama.ui.navigator</artifactId>
+			<version>1.7.0-SNAPSHOT</version>
+		</dependency>
 		
 	</dependencies>
 
