--- a/idees.gama.parent/pom.xml
+++ b/idees.gama.parent/pom.xml
@@ -20,7 +20,7 @@
 			</releases>
 			<id>p2Repo</id>
 			<name>p2Repo</name>
-			<url>http://51.255.46.42/updates/repo/</url>
+			<url>http://51.255.46.42/updates/</url>
 		</repository>
 
 		<repository>
