--- a/idees.gama.parent/pom.xml
+++ b/idees.gama.parent/pom.xml
@@ -20,12 +20,12 @@
 			</releases>
 			<id>p2Repo</id>
 			<name>p2Repo</name>
-			<url>http://51.255.46.42/updates/</url>
+			<url>http://51.255.46.42/updates</url>
 		</repository>
 
 		<repository>
-			<id>eclipse-mars</id>
-			<url>http://download.eclipse.org/releases/mars</url>
+			<id>eclipse-oxygen</id>
+			<url>http://download.eclipse.org/releases/oxygen</url>
 			<layout>p2</layout>
 		</repository>
 		<repository>
@@ -193,7 +193,7 @@
 			<properties>
 				<!-- Properties relative to the distant host where to upload the repo -->
 				<ftp.url>scp://51.255.46.42</ftp.url>
-				<ftp.toDir>./var/www/gama_updates/graphical_modeling</ftp.toDir>
+				<ftp.toDir>./var/www/gama_updates/graphical_modeling/oxygen</ftp.toDir>
 				<!-- Relative path to the repo being uploaded -->
 				<repo.path>${project.build.directory}/repository/</repo.path>
 			</properties>
