--- a/idees.gama.parent/pom.xml
+++ b/idees.gama.parent/pom.xml
@@ -367,18 +367,6 @@
 					<resolver>p2</resolver>
 					<pomDependencies>consider</pomDependencies>
 					<environments>
-					<!-- 
-						<environment>
-							<os>linux</os>
-							<ws>gtk</ws>
-							<arch>x86</arch>
-						</environment>
-						<environment>
-							<os>win32</os>
-							<ws>win32</ws>
-							<arch>x86</arch>
-						</environment>
-					 -->
 						<environment>
 							<os>linux</os>
 							<ws>gtk</ws>
@@ -393,6 +381,11 @@
 							<os>macosx</os>
 							<ws>cocoa</ws>
 							<arch>x86_64</arch>
+						</environment>
+						<environment>
+							<os>macosx</os>
+							<ws>cocoa</ws>
+							<arch>aarm64</arch>
 						</environment>
 					</environments>
 					<executionEnvironment>JavaSE-${jdk.version}</executionEnvironment>
