--- a/gama.ui.diagram/build.properties
+++ b/gama.ui.diagram/build.properties
@@ -3,5 +3,5 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                plugin.xml,\
-               icons/
-src.includes = icons/
+               icons/,\
+               model/
