--- a/gama.feature.ui.diagram/.project
+++ b/gama.feature.ui.diagram/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>idees.gama.feature.graphical_modeling</name>
+	<name>gama.feature.ui.diagram</name>
 	<comment></comment>
 	<projects>
 	</projects>
